<resources>
    <string name="app_name">易掌柜手机助手</string>


    <string name="push_button">按键</string>
    <string name="touch_button">触摸</string>
    <string name="recommend_button">推荐</string>
    <string name="local_button">本地</string>
    <string name="uninstall_button">卸载</string>
    <string name="tvbox_button">电视</string>
    <string name="mobile_button">手机</string>
    <string name="tool_button">工具</string>

    <string name="disconnect_notice">您还没有绑定电视，点击去绑定</string>
    <string name="disconnect_notice2">未连接电视！</string>
    <string name="save_notice">请选择要保存的路径</string>
    <string name="system_app_uninstall_notice">系统应该无法卸载！</string>
    <string name="file_count_end">个文件</string>
    <string name="empty_dir">空文件夹</string>

    <string name="appliction">应用</string>
    <string name="remote">遥控</string>
    <string name="transmitter">传输</string>
    <string name="tool">工具</string>

    <string name="screenshot">屏幕截图</string>
    <string name="screen_picture">截图浏览</string>
    <string name="tool_clean">一键加速</string>
    <string name="tool_reboot">重新启动</string>

    <string name="installed">已安装</string>
    <string name="old_version">旧版</string>
    <string name="update">升级</string>
    <string name="installing">安装</string>
    <string name="uninstalled">已卸载</string>
    <string name="system_app">系统应用</string>
    <string name="uninstall">卸载</string>
    <string name="version">版本：</string>

    <string name="item_trans">传输</string>
    <string name="item_move">移动</string>
    <string name="item_rename">重命名</string>
    <string name="item_remove">删除</string>
    <string name="item_copy">复制</string>
    <string name="item_allcheck">全选</string>
    <string name="item_cancel">取消</string>
    <string name="item_new_create">新建</string>

    <string name="popup_remove_title">确认删除?</string>
    <string name="popup_over_title">是否覆盖?</string>
    <string name="popup_edit_title">请输入</string>
    <string name="popup_upload_title">正在上传……</string>
    <string name="popup_download_title">正在下载……</string>
    <string name="popup_copy_title">正在复制……</string>
    <string name="popup_move_title">正在移动……</string>
    <string name="popup_plan_download_title">准备下载</string>
    <string name="popup_ok_button">确定</string>
    <string name="popup_cancel_button">取消</string>
    <string name="popup_delete_ok_button">狠心删除</string>
    <string name="popup_delete_cancel_button">容朕想想</string>
    <string name="popup_more_select_notice">%1$d个文件（夹）</string>
    <string name="edit_rename_title">请编辑文件名</string>
    <string name="edit_create_title">请输入文件夹名</string>
    <string name="edit_write_title">请编辑</string>

    <string name="notice_space_not_enough">空间不足！</string>

    <string name="def_device_info">设备型号：Q28\n固件版本：p212-userdebug 7.1.1\n当前分辨率：1080p60hz\n网络连接：网络未连接</string>

    <string name="def_path_info">/storage/emulated/0\"type=\"1\"name=\"Music\"size=\"1888432128\"count=\"24\"time=\"1514024961000
        \"type=\"1\"name=\"Podcasts\"size=\"1888432128\"count=\"0"time=\"1503051319000\"type=\"1\"name=\"Ringtones\"size=\"1888432128
        \"count=\"0\"time=\"1503051319000\"type=\"1\"name=\"Alarms\"size=\"1888432128\"count=\"4\"time=\"1514967635000\"type=\"1
        \"name=\"Notifications\"size=\"1888432128\"count=\"1\"time=\"1503051349000\"type=\"1\"name=\"install_\"size=\"1888432128
        \"count=\"0\"time=\"1514967273000\"type=\"1\"name=\"Movies\"size=\"1888432128\"count=\"1\"time=\"1504950024000
        \"type=\"1\"name=\"Download\size=\"1888432128\"count=\"0\"time=\"1513853592000\"type=\"1\"name=\"DCIM\"size=\"1888432128
        \"count=\"3\"time=\"1504605375000\"type=\"1\"name=\"Android\"size=\"1888432128\"count=\2\"time=\"1505177356000
        \"type=\"1\"name=\"tencent\"size=\"1888432128\"count=\"10\"time=\"1508223283000</string>

    <string name="def_tvapp_info">/sdcard/Pictures/icons\"type=\"1\"label=\"携程旅行\"pckn=\"ctrip.android.view\"verC=\"163\"verN=\"7.7.1
        \"type=\"1\"label=\"Tencent Video\"pckn=\"com.tencent.qqlive\"verC=\"13049\"verN=\"5.8.1.13049\"type=\"1\"label=\"QQ邮箱
        \"pckn=\"com.tencent.androidqqmail\"verC=\"10123606\"verN=\"5.2.6\"type=\"1\"label=\"手机淘宝\"pckn=\"com.taobao.taobao
        \"verC=\"161\"verN=\"6.11.0\"type=\"1\"label=\"今日头条\"pckn=\"com.ss.android.article.news\"verC=\"637\"verN=\"6.3.7
        \"type=\"1\"label=\"手机营业厅\"pckn=\"com.sinovatech.unicom.ui\"verC=\"54\"verN=\"5.4.1\"type=\"1\"label=\"美团\"pckn=\"
        com.sankuai.meituan\"verC=\"481\"verN=\"7.8.1\"type=\"1\"label=\"Netflix\"pckn=\"com.netflix.mediaclient\"verC=\"15145\"verN=\"
        4.16.1 build 15145\"type=\"1\"label=\"Alipay\"pckn=\"com.eg.android.AlipayGphone\"verC=\"115\"verN=\"10.1.2.091816
        \"type=\"1\"label=\"当贝市场\"pckn=\"com.dangbeimarket\"verC=\"148\"verN=\"4.0.4\"type=\"1\"label=\"Baidu\"pckn=\"com.baidu.searchbox
        \"verC=\"37750016\"verN=\"9.0.0.10\"type=\"1\"label=\"Qunar Travel\"pckn=\"com.Qunar\"verC=\"149\"verN=\"8.6.4\"type=\"0\"label=\"
        Kodi\"pckn=\"org.xbmc.kodi\"verC=\"173000\"verN=\"17.3\"type=\"0\"label=\"Browser\"pckn=\"org.chromium.webview_shell\"verC=\"1\"verN=\"
        1.0\"type=\"0\"label=\"MoviePlayer\"pckn=\"com.droidlogic.videoplayer\"verC=\"1\"verN=\"1.0\"type=\"0\"label=\"Read Logs\"pckn=\"
        com.droidlogic.readlog\"verC=\"12\"verN=\"1.2\"type=\"0\"label=\"Miracast\"pckn=\"com.droidlogic.miracast\"verC=\"20140127\"verN=\"
        1.3.201401271346\"type=\"0\"label=\"Media Center\"pckn=\"com.droidlogic.mediacenter\"verC=\"2\"verN=\"v201510232109\"type=\"0\"label=\"
        AppInstaller\"pckn=\"com.droidlogic.appinstall\"verC=\"1\"verN=\"1.0\"type=\"0\"label=\"PPPoE\"pckn=\"com.droidlogic.PPPoE
        \"verC=\"1\"verN=\"1.0\"type=\"0\"label=\"FileBrowser\"pckn=\"com.droidlogic.FileBrower\"verC=\"1\"verN=\"4.0\"type=\"0\"label=\"Files
        \"pckn=\"com.android.documentsui\"verC=\"25\"verN=\"7.1.1\"type=\"0"label=\"Settings\"pckn=\"com.android.settings\"verC=\"25\"verN=\"7.1.1</string>
</resources>
