<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="#25252c">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/top_relative"
            android:layout_width="match_parent"
            android:layout_height="48dp">
            
            <TextView
                android:id="@+id/push_button"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="100dp"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/title_text_back"
                android:text="@string/push_button"/>
            <TextView
                android:id="@+id/touch_button"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="100dp"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/title_text_back"
                android:text="@string/touch_button"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#0e0e0e"></View>
        <LinearLayout
            android:id="@+id/notice_linear_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/notice_tag"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/disconnect_notice"
                android:textColor="#757575"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:padding="20dp">
                <ImageView
                    android:id="@+id/power_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/poweroff_button"/>
                <ImageView
                    android:id="@+id/volume_down_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/volume_down"/>
                <ImageView
                    android:id="@+id/volume_mute_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/volume_mute"/>
                <ImageView
                    android:id="@+id/volume_up_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/volume_up"/>
                <ImageView
                    android:id="@+id/setting_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/setting_button"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/touch_linear"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/touch_mouse_back"
                android:gravity="center"/>
            <RelativeLayout
                android:id="@+id/push_relative"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:background="@drawable/direction_back"
                    android:layout_centerInParent="true">
                    <ImageView
                        android:id="@+id/center_button"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="fitXY"
                        android:layout_centerInParent="true"
                        android:src="@drawable/center_button"/>
                    <ImageView
                        android:id="@+id/up_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/up_button"
                        android:layout_centerHorizontal="true"/>
                    <ImageView
                        android:id="@+id/left_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/left_button"
                        android:layout_centerVertical="true"/>
                    <ImageView
                        android:id="@+id/right_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/right_button"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>
                    <ImageView
                        android:id="@+id/down_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/down_button"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/back_button"/>
                <ImageView
                    android:id="@+id/home_button"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="40dp"
                    android:src="@drawable/home_button"/>
                <ImageView
                    android:id="@+id/menu_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="40dp"
                    android:src="@drawable/menu_button"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <com.ider.yzg.view.EditView
        android:id="@+id/edit_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
</RelativeLayout>